--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>CRUD - Polen</title>
+  <title>CRUD</title>
   <link rel="icon" type="image/png" href="icone.png" sizes="16x16" />
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@200;700&display=swap" rel="stylesheet">    
   <link rel="stylesheet" href="css/style.css" />
@@ -37,7 +37,7 @@
       <div class="row justify-content-md-center">
         <div class="col-sm-12 col-md-8">
           <div class="content-inner">
-                          <h1 id="titulo">Estas são as Ongs do Polen</h1>
+                          <h1 id="titulo">Estas são as Ongs existentes</h1>
             <div class="to-do-output">
 
               <table class="table table-striped" id="tblOngs">    
